# Process_Compliance_Auditor

./: .gitignore  LICENSE  README.md  __.pre-commit-config.yaml  pyproject.toml  pytest.ini
config/: project_config.toml
rules/: rules.toml  rules.toml.example
src/: __init__.py  main.py
src/Process_Compliance_Auditor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/_common/: facts.py
src/arg_parser/: __init__.py  cli_arg_parser.py  cli_arguments.py
src/collection/probes/: base.py  probes.py
src/collection/process_handler/: __init__.py  audited_process.py  process_handler.py
src/collection/snapshot_manager/: snapshot_manager.py
src/compliance_engine/: __init__.py  fact_sheet.py
src/core/compliance_engine/: __init__.py  compliance_engine.py
src/core/fact_processor/: fact_processor.py  fact_registry.py  fact_sheet.py
src/core/probes/: base.py  probes.py
src/core/rules_engine/: rules_engine.py
src/custom_exceptions/: custom_exception.py
src/fact_processor/: fact_processor.py  fact_registry.py  fact_sheet.py
src/interface/arg_parser/: __init__.py  cli_arg_parser.py  cli_arguments.py
src/process_handler/: __init__.py  audited_process.py  process_handler.py  process_snapshot.py
src/rules_engine/: __init__.py  fact_sheet.py  rule.py  rules_engine.py
src/services/: logger.py
src/snapshot_manager/: snapshot_manager.py
src/utils/: __init__.py  get_project_config.py
tests/: conftest.py
tests/fixtures/: __init__.py  fake_fact_registry.py  fixtures.py  mock_probe.py  real_snapshot_manager.py
tests/src/: test_main.py
(+76 files in other folders)
