[tool.uv]
package = true

[project]
name = "Process_Compliance_Auditor"
version = "0.1.0"
description = "A program to check compliance of rules against a process and generate a readable output."
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
