[tool.uv]
package = true

[project]
name = "Process_Compliance_Auditor"
version = "0.1.0"
description = "A program to check compliance of rules against a process and generate a readable output."
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.1.3",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
extend-exclude = ['.venv', '__pycache__', '.html', '.log', '.ini']
indent-width = 4
[tool.ruff.format]
quote-style = 'single'
docstring-code-format = true
indent-style = 'space'
[tool.ruff.lint]
select = ['ALL']
ignore = ["D212", "D203", "N802"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ['D', 'S101', 'ANN201', 'ANN204', 'INP001', 'ANN001',
                'PLR2004', 'N803']

[tool.black]
line-length = 100
target-version = ['py314']
extend-exclude = """
(
    .git
   | .html
   | .venv
   | .log
   | .ini
)
"""

[tool.bandit]
exclude_dirs = ['tests']
